// This is your Prisma schema file,
// learn more about it in the docs: https://pris.ly/d/prisma-schema

generator client {
  provider = "prisma-client-js"
}

generator dbml {
  provider = "prisma-dbml-generator"
}

datasource db {
  provider = "sqlite"
  url      = env("DATABASE_URL")
}

model Owner {
  id           String    @id @default(cuid())
  firstname    String
  lastname     String
  email        String
  gender       String
  profileImage String
  accounts     Account[]
}

model Account {
  accountNo  String   @id @default(cuid())
  acctType   String
  balance    Float
  dateOpened DateTime @default(now())
  Owner      Owner    @relation(fields: [ownerId], references: [id], onUpdate: Cascade, onDelete: Cascade)
  ownerId    String

  transactions Transaction[]
}

model Transaction {
  transType String
  amount    Float
  transId   Int      @id @default(autoincrement())
  Account   Account @relation(fields: [accountNo], references: [accountNo],onUpdate: Cascade, onDelete: Cascade)
  accountNo String
}
